refactored product_attribute_value to seperate entity and added resource in use exception